Add new links to  roticanai and chickensatay

--- a/index.html
+++ b/index.html
@@ -9,7 +9,17 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="./recipes/nasi_lemak.html">Malaysian Nasi Lemak</a>
+    <ul>
+        <li>
+            <a href="./recipes/nasi_lemak.html">Malaysian Nasi Lemak</a>
+        </li>
+        <li>
+            <a href="./recipes/roticanai.html">Roti Canai (Flatbread) with Curried Lentil Dip</a>
+        </li>
+        <li>
+            <a href="./recipes/chickensatay.html">Chicken Satay with Peanut Sauce</a>
+        </li>
+    </ul>
     
 </body>
 </html>
