Adding animation,styling on Index.html

--- a/index.html
+++ b/index.html
@@ -4,22 +4,27 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Odin Recipes</title>
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1>Odin Recipes : Malaysian Cuisines</h1>
 
-    <ul>
-        <li>
-            <a href="./recipes/nasi_lemak.html">Malaysian Nasi Lemak</a>
-        </li>
-        <li>
-            <a href="./recipes/roticanai.html">Roti Canai (Flatbread) with Curried Lentil Dip</a>
-        </li>
-        <li>
-            <a href="./recipes/chickensatay.html">Chicken Satay with Peanut Sauce</a>
-        </li>
-    </ul>
-    
+    <img class="main-img" src="./img/malaysianfood.jpg" alt="Elfi's">
+
+    <div class="row">
+        <div class="pic1">
+            <a href="./recipes/chickensatay.html"><img src="./img/chickensatay.jpg" alt="Malaysian Chicken Satay"></a>
+        </div>
+        
+        <div class="pic2">
+            <a href="./recipes/nasi_lemak.html"><img src="./img/nasilemak.jpg" alt="Malaysian Nasi Lemak"></a>
+        </div>
+
+        <div class="pic3">
+            <a href="./recipes/roticanai.html"><img src="./img/roticanai.jpg" alt="Malaysian Roti Canai"></a>
+        </div>
+    </div>
+
 </body>
 </html>
