Project recipe website done_

--- a/index.html
+++ b/index.html
@@ -21,19 +21,19 @@
 
     <div class="row">
         <div class="pic1">
-            <a href="./recipes/chickensatay.html"><img src="./img/chickensatay.jpg" alt="Malaysian Chicken Satay"></a>
+            <a href="./recipes/chickensatay.html"><img class="child-row" src="./img/chickensatay.jpg" alt="Malaysian Chicken Satay"></a>
             <div class="text-over-img">Chicken Satay</div>
             <div class="text-over-img">with Peanut Sauce</div>
         </div>
         
         <div class="pic2">
-            <a href="./recipes/nasi_lemak.html"><img src="./img/nasilemak.jpg" alt="Malaysian Nasi Lemak"></a>
+            <a href="./recipes/nasi_lemak.html"><img class="child-row" src="./img/nasilemak.jpg" alt="Malaysian Nasi Lemak"></a>
             <div class="text-over-img">Nasi Lemak</div>
             <div class="text-over-img">(Coconut Rice)</div>
         </div>
 
         <div class="pic3">
-            <a href="./recipes/roticanai.html"><img src="./img/roticanai.jpg" alt="Malaysian Roti Canai"></a>
+            <a href="./recipes/roticanai.html"><img class="child-row" src="./img/roticanai.jpg" alt="Malaysian Roti Canai"></a>
             <div class="text-over-img">Roti Canai</div>
             <div class="text-over-img">(Malaysian Flat Bread)</div>
         </div>
